zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__new_floating_pane_in_auto_layout-3.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌┌ Pane #2 ───────────────────── PIN [ ] | active-ant ┐─────┌ Pane #3 ────────────────────── PIN [ ] | alert-ant ┐e-ant ┐
01 (C): ││                                                    │     │                                                    │      │
02 (C): ││                                                    │     │                                                    │      │
03 (C): ││                                                    │     │                                                    │      │
04 (C): ││                                                    │     │                                                    │      │
05 (C): ││                                                    │     │                                                    │      │
06 (C): ││                                                    │     │                                                    │      │
07 (C): ││                                                    │     │                                                    │      │
08 (C): ││                                                    │     │                                                    │      │
09 (C): │└────────────────────────────────────────────────────┘     └────────────────────────────────────────────────────┘      │
10 (C): │                                                                                                                       │
11 (C): │                                ┌ Pane #4 ────────────────────── PIN [ ] | alive-ant ┐                                 │
12 (C): │                                │                                                    │                                 │
13 (C): │                                │                                                    │                                 │
14 (C): │                                │                                                    │                                 │
15 (C): │                                │                                                    │                                 │
16 (C): │                                │                                                    │                                 │
17 (C): │                                │                                                    │                                 │
18 (C): │                                │                                                    │                                 │
19 (C): └────────────────────────────────└────────────────────────────────────────────────────┘─────────────────────────────────┘
