zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__new_pane_in_auto_layout-7.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────── able-ant ┐┌ Pane #2 ───────────────────────────────────── active-ant ┐
01 (C): │                                                           ││                                                          │
02 (C): │                                                           ││                                                          │
03 (C): │                                                           ││                                                          │
04 (C): └───────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
05 (C): ┌ Pane #3 ─────────────────────────────────────── alert-ant ┐┌ Pane #6 ────────────────────────────────────── ample-ant ┐
06 (C): │                                                           ││                                                          │
07 (C): │                                                           ││                                                          │
08 (C): │                                                           ││                                                          │
09 (C): └───────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
10 (C): ┌ Pane #4 ─────────────────────────────────────── alive-ant ┐┌ Pane #7 ─────────────────────────────────── artistic-ant ┐
11 (C): │                                                           ││                                                          │
12 (C): │                                                           ││                                                          │
13 (C): │                                                           ││                                                          │
14 (C): └───────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
15 (C): ┌ Pane #5 ────────────────────────────────────── amused-ant ┐┌ Pane #8 ────────────────────────────────────── awake-ant ┐
16 (C): │                                                           ││                                                          │
17 (C): │                                                           ││                                                          │
18 (C): │                                                           ││                                                          │
19 (C): └───────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
